# RAG_Demo

./: .gitignore  README.md  et --hard 743e693  pyproject.toml
RAG_DEMO/: Dockerfile  Donot_CommitGitHub_Docker_Instruction  Main.py  app.py  data_loader.py  model_service.py  pyproject.toml  requirements.txt  text_generator.py
