[tool.poetry]
name = "rag-demo"
version = "0.1.0"
description = ""
authors = ["GuyYar1 <132554415+GuyYar1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pip = "^24.2"
prophet = "^1.1.5"
flask = "^3.0.3"
flask-session = "^0.8.0"
transformers = "^4.44.2"
gensim = "^4.3.3"
scikit-learn = "^1.5.1"
nltk = "^3.9.1"
flask-ngrok = "^0.0.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
